fix vertical-align, readme and render call according to PR comments

--- a/src/ui/components/table/table.scss
+++ b/src/ui/components/table/table.scss
@@ -36,6 +36,7 @@
   td {
     padding: 10px;
     border: 1px solid $border-color;
+    vertical-align: top;
   }
 
   &--minimal {
